Minor changes to info-section and footer

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
     <div class="info-section">
         <div class="info-main-content">
-            <div class="info-location">
+            <div class="info-cell">
                 <div class="icon">
                     <img src="images/location.svg" alt="">
                 </div>
@@ -289,7 +289,7 @@
 
                 </div>
             </div>
-            <div class="info-time">
+            <div class="info-cell">
                 <div class="icon">
                     <img src="images/clock.svg" alt="">
                 </div>
@@ -303,7 +303,7 @@
                     <span class="day" style="color: black;"><span>Sunday (Closed)</span></span>
                 </div>
             </div>
-            <div class="info-phone">
+            <div class="info-cell">
                 <div class="icon">
                     <img src="images/call.svg" alt="">
                 </div>
@@ -319,12 +319,10 @@
         </div>
     </div>
 
-    <footer>
-        <div class="social-media"></div>
-        <div class="main-footer-content">
-            <div class="footer-title">
+
+            <!-- <div class="footer-title">
                 <h2>CASTRO'S CAFETERIA</h2>
-            </div>
+            </div> -->
             <!-- <div class="location">
                 <div class="location-title">
                     <h4>CASTRO'S</h4>
@@ -349,18 +347,31 @@
                     <span class="day" style="color: red;"><span>Sunday (Closed)</span></span>
                 </div>
             </div> -->
-            <div class="footer-nav-menu">
-                <ul>
-                    <li>Menu</li>
-                    <li>About us</li>
-                    <li>Gallery</li>
-                    <li>Contact us</li>
-                </ul>
+    <footer>
+        <div class="main-footer-content">
+                    <div class="footer-left-side">
+                        <div class="footer-title">
+                            <h2>CASTRO'S CAFETERIA</h2>
+                        </div>
+                            <ul>
+                                <li>Menu</li>
+                                <li>About us</li>
+                                <li>Gallery</li>
+                                <li>Contact us</li>
+                            </ul>
+                        
+                                        </div>
+                <div class="footer-right-side">
+                    <div class="footer-social-media">
+                        <img src="images/instagram.svg" alt="" class="footer-social-logo">
+                        <img src="images/mail.svg" alt="" class="footer-social-logo">
+                        <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
+                    </div>
+                    <div class="footer-image">
+                        <img src="images/happy pineapple.png" alt="">
+                    </div>
+                </div>
             </div>
-            <div class="footer-image">
-                <img src="images/happy pineapple.png" alt="">
-            </div>
-        </div>
     </footer>
 </body>
 </html>
