--- a/index.html
+++ b/index.html
@@ -52,7 +52,55 @@
             <div class="rightSide">
                 <h2>Bocadillos y mucho amor</h2>
                 <h3>Open for breakfast & lunch</h3>
-                <button>Contact Us</button>
+                <!-- <button>Contact Us</button> -->
+                <!-- sample html for this button-->
+<div class="button">
+    CONTACT US
+    <div></div>
+  </div>
+  <!-- stylesheet for this button -->
+  <style type="text/css">
+    .button {
+        width: 10rem;
+        text-align: center;
+      backface-visibility: hidden;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+    white-space: nowrap;
+    background: #219C90;
+    border-radius: 0px;
+    border: 0px solid #1a7a70;
+    border-width: 0px 0px 4px 0px;
+    padding: 10px 20px 10px 20px;
+      color: #fff;
+    font-size: initial;
+    font-family: Helvetica Neue;
+    font-weight: 900;
+    font-style: normal
+    }
+    .button > div {
+      color: #999;
+    font-size: 10px;
+    font-family: Helvetica Neue;
+    font-weight: initial;
+    font-style: normal;
+    text-align: center;
+    margin: 0px 0px 0px 0px
+    }
+    .button > i {
+      font-size: 1em;
+    border-radius: 0px;
+    border: 0px solid transparent;
+    border-width: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
+    position: static
+    }
+    .button > .ld {
+      font-size: initial
+    }
+  </style>
             </div>
         </div>
     </main>
