changes to the navigation bar

--- a/index.html
+++ b/index.html
@@ -8,49 +8,50 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <main>
-        <div class="nav-menu">
-            <div class="left-nav">
+    <main id="top">
+        <header class="top-nav">
+            <div class="nav-menu">
+                <div class="left-nav">
+                    <ul class="nav-items">
+                        <li><a href="#">MENU</a></li>
+                        <li><a href="#">ABOUT US</a></li>
+                    </ul>
+                </div>
+                <div class="logo">
+                    <div class="logo-title">
+                        <h1>CASTRO'S CAFETERIA</h1>
+                    </div>
+                    <div class="logo-content">
+                        <span>BUTTIES</span><span>TAPAS</span><span>COFFE</span><span>BEER</span>
+                    </div>
+                </div>
+                <div class="right-nav">
+                    <div class="top-right-nav">
+                        <ul class="nav-items">
+                            <li><a href="#">GALLERY</a></li>
+                            <li><a href="#">CONTACT US</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </div>
+            <div class="nav-menu-phone">
                 <ul class="nav-items">
                     <li><a href="#">MENU</a></li>
                     <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">CONTACT US</a></li>
                 </ul>
-
             </div>
-            <div class="logo">
-                <div class="logo-title">
-                    <h1>CASTRO'S CAFETERIA</h1>
-                </div>
-                <div class="logo-content">
-                    <span>BUTTIES</span><span>TAPAS</span><span>COFFE</span><span>BEER</span>
-                </div>
-            </div>
-            <div class="right-nav">
-                <div class="top-right-nav">
-                    <ul class="nav-items">
-                        <li><a href="#">GALLERY</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </div>
-        <div class="nav-menu-phone">
-            <ul class="nav-items">
-                <li><a href="#">MENU</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">CONTACT US</a></li>
-            </ul>
-        </div>
+        </header>
+        <section class="banner"></section>
         <div class="main-screen">
             <div class="rightSide">
-                <h2>Bocadillos y mucho amor</h2>
+                <h2>BOCADILLOS Y MUCHO AMOR</h2>
                 <h3>Open for breakfast & lunch</h3>
                 <!-- <button>Contact Us</button> -->
                 <!-- sample html for this button-->
