Minor changes to the menu design and functionality

--- a/menu.html
+++ b/menu.html
@@ -3,124 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
 <body>
-    <main id="top">
-        <header class="top-nav">
-            <div class="nav-menu">
-                <div class="left-nav">
-                    <ul class="nav-items">
-                        <li><a href="menu.html">MENU</a></li>
-                        <li><a href="#">ABOUT US</a></li>
-                    </ul>
-                </div>
-                <a href="index.html" class="logo">
-                    <div class="logo-title">
-                        <h1>CASTRO'S CAFETERIA</h1>
-                    </div>
-                    <div class="logo-content">
-                        <span>BUTTIES</span><span>TAPAS</span><span>COFFE</span><span>BEER</span>
-                    </div>
-                </a>
-                <div class="right-nav">
-                    <div class="top-right-nav">
-                        <ul class="nav-items">
-                            <li><a href="#">GALLERY</a></li>
-                            <li><a href="#">CONTACT US</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </div>
-            <div class="nav-menu-phone">
+    <header class="top-nav">
+        <div class="nav-menu">
+            <div class="left-nav">
                 <ul class="nav-items">
-                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="#">MENU</a></li>
                     <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">GALLERY</a></li>
-                    <li><a href="#">CONTACT US</a></li>
                 </ul>
             </div>
-        </header>
-        <div class="main-screen">
-            <div class="rightSide">
-                <h2>BOCADILLOS Y MUCHO AMOR</h2>
-                <h3>Open for breakfast & lunch</h3>
-                <!-- <button>Contact Us</button> -->
-                <!-- sample html for this button-->
-<a href="#">
-    <div class="button">
-        CHECK IT OUT
-        <div></div>
-      </div>
-</a>
-  <!-- stylesheet for this button -->
-  <style type="text/css">
-    .button {
-        width: 10rem;
-        text-align: center;
-      backface-visibility: hidden;
-    /* position: relative; */
-    cursor: pointer;
-    display: inline-block;
-    white-space: nowrap;
-    background: #219C90;
-    border-radius: 0px;
-    border: 0px solid #1a7a70;
-    border-width: 0px 0px 4px 0px;
-    padding: 10px 20px 10px 20px;
-      color: #fff;
-    font-size: initial;
-    font-family: Helvetica Neue;
-    font-weight: 900;
-    font-style: normal
-    }
-    .button > div {
-      color: #999;
-    font-size: 10px;
-    font-family: Helvetica Neue;
-    font-weight: initial;
-    font-style: normal;
-    text-align: center;
-    margin: 0px 0px 0px 0px
-    }
-    .button > i {
-      font-size: 1em;
-    border-radius: 0px;
-    border: 0px solid transparent;
-    border-width: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    position: static
-    }
-    .button > .ld {
-      font-size: initial
-    }
-  </style>
+            <a href="index.html" class="logo">
+                <div class="logo-title">
+                    <h1>CASTRO'S CAFETERIA</h1>
+                </div>
+                <div class="logo-content">
+                    <span>BUTTIES</span><span>TAPAS</span><span>COFFE</span><span>BEER</span>
+                </div>
+            </a>
+            <div class="right-nav">
+                <div class="top-right-nav">
+                    <ul class="nav-items">
+                        <li><a href="#">GALLERY</a></li>
+                        <li><a href="#">CONTACT US</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
         </div>
-    </main>
-
-
-    <div class="lil-about-us" id="aboutUs">
-        <div class="lil-rightside">
-            <img src="images/castro.jpg" alt="">
+        <div class="nav-menu-phone">
+            <ul class="nav-items">
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">ABOUT US</a></li>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">CONTACT US</a></li>
+            </ul>
         </div>
-        <div class="lil-leftside">
-            <h3>WHO ARE WE?</h3>
-            <p>Step into Castro's Cafeteria, a lively spot wedged between Denbigh Castle and Ye Hole in Ye Wall. We, Borja Castro-Cabrera and Natasha, are here to infuse Liverpool with the spirit of Tenerife. Think tapas, Mechada, and a vibrant atmosphere that's pure sunshine!</p>
-            <p>At Castro's, Borja's culinary journey started from scratch, but now it's a full-blown flavor adventure. Our menu, born from Facetime sessions with family, boasts Tenerife's Mechada and more—fresh, delicious, and made with heaps of passion.</p>
-            <p>Castro's isn't just about food; it's a hub for connections. Our cozy space sparks conversations among strangers, turning them into friends over vibrant dishes. The energy spills into the nearby pubs, creating a fusion of English and Spanish camaraderie. Join us for unforgettable moments at Castro's Cafeteria! Your seat and a plate of goodness await!</p>
-        </div>
-    </div>
-
-
+    </header>
 
     <div class="menu-section">
         <div class="butties">
@@ -329,78 +255,6 @@
 
     </div>
 
-    <div class="info-section">
-        <div class="info-main-content">
-            <div class="info-cell">
-                <div class="icon">
-                    <img src="images/location.svg" alt="">
-                </div>
-                <div class="location-info">
-                    <span>8A Hackins hey,</span>
-                    <span>Liverpool, L2 2AW,</span>
-                    <span>United Kingdom</span>
-                    <a href="https://maps.app.goo.gl/9YywLLvwJcCdgLaXA">MAP</a>
-
-                </div>
-            </div>
-            <div class="info-cell">
-                <div class="icon">
-                    <img src="images/clock.svg" alt="">
-                </div>
-                <div class="timetable-info">
-                    <span class="day"><span>Monday </span><span>9 am – 5 pm</span></span>
-                    <span class="day"><span>Tuesday </span><span>9 am – 5 pm</span></span>
-                    <span class="day"><span>Wednesday </span><span>9 am – 5 pm</span></span>
-                    <span class="day"><span>Thursday </span><span>9 am – 5 pm</span></span>
-                    <span class="day"><span>Friday </span><span>9 am – 7 pm</span></span>
-                    <span class="day"><span>Saturday </span><span>9 am – 7 pm</span></span>
-                    <span class="day" style="color: black;"><span>Sunday (Closed)</span></span>
-                </div>
-            </div>
-            <div class="info-cell">
-                <div class="icon">
-                    <img src="images/call.svg" alt="">
-                </div>
-                <div class="info-content">
-                    <span>phoneNumber</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="info-catering">
-            <span>Castro's is also available for catering</span>
-            <span class="email">castro8ba@gmail.com</span>
-        </div>
-    </div>
-
-
-            <!-- <div class="footer-title">
-                <h2>CASTRO'S CAFETERIA</h2>
-            </div> -->
-            <!-- <div class="location">
-                <div class="location-title">
-                    <h4>CASTRO'S</h4>
-                </dyyuiv>
-                <div class="location-content">
-                    <span>8A Hackins hey,</span>
-                    <span>Liverpool, L2 2AW,</span>
-                    <span>United Kingdom</span>
-                </div>
-            </div>
-            <div class="timetable">
-                <div class="timetable-title">
-                    <h4>HOURS</h4>
-                </div>
-                <div class="timetable-content">
-                    <span class="day"><span>Monday </span><span>9 am–5 pm</span></span>
-                    <span class="day"><span>Tuesday </span><span>9 am–5 pm</span></span>
-                    <span class="day"><span>Wednesday </span><span>9 am–5 pm</span></span>
-                    <span class="day"><span>Thursday </span><span>9 am–5 pm</span></span>
-                    <span class="day"><span>Friday </span><span>9 am–7 pm</span></span>
-                    <span class="day"><span>Saturday </span><span>9 am–7 pm</span></span>
-                    <span class="day" style="color: red;"><span>Sunday (Closed)</span></span>
-                </div>
-            </div> -->
     <footer>
         <div class="main-footer-content">
                     <div class="footer-left-side">
