--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
                 <div class="left-nav">
                     <ul class="nav-items">
                         <li><a href="menu.html">MENU</a></li>
-                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">WHO WE ARE</a></li>
                     </ul>
                 </div>
                 <a href="index.html" class="logo">
-                    <div class="logo-title">
+                    <!-- <div class="logo-title">
                         <h1>CASTRO'S CAFETERIA</h1>
                     </div>
                     <div class="logo-content">
                         <span>BUTTIES</span><span>TAPAS</span><span>COFFE</span><span>BEER</span>
-                    </div>
+                    </div> -->
+                    <img class="castro-mainLogo" src="images/castroLogo.png" alt="">
                 </a>
                 <div class="right-nav">
                     <div class="top-right-nav">
@@ -129,7 +130,7 @@
             </div>
             <div class="content">
 
-                <div class="column 1">
+                <div class="column">
                     <div class="buttie-cell">
                         <div class="buttie-title">
                             <h3>THE MECHADA</h3>
@@ -165,7 +166,7 @@
 
                 </div>
 
-                <div class="column 2">
+                <div class="column">
                     <div class="buttie-cell">
                         <div class="buttie-title">
                             <h3>SERRANITO</h3>
@@ -200,7 +201,7 @@
                     </div>
                 </div>
 
-                <div class="column 3">
+                <div class="column">
                     <div class="buttie-cell">
                         <div class="buttie-title">
                             <h3>EL CASTRO</h3>
@@ -336,17 +337,30 @@
                     <img src="images/location.svg" alt="">
                 </div>
                 <div class="location-info">
-                    <span>8A Hackins hey,</span>
-                    <span>Liverpool, L2 2AW,</span>
-                    <span>United Kingdom</span>
-                    <a href="https://maps.app.goo.gl/9YywLLvwJcCdgLaXA">MAP</a>
+
+                    <a href="https://maps.app.goo.gl/9YywLLvwJcCdgLaXA">
+                        <span>8A Hackins hey,</span>
+                        <span>Liverpool, L2 2AW,</span>
+                        <span>United Kingdom</span>
+                    </a>
 
                 </div>
+            </div>
+            <div class="info-cell">
+                <!-- <div class="icon">
+                    <img src="images/call.svg" alt="">
+                </div>
+                <div class="info-content">
+                    <span>phoneNumber</span>
+                </div> -->
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2378.3911701507423!2d-2.992845023578032!3d53.40783007230717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b21eddf2653d1%3A0x6abac9849d310dcb!2sCastro&#39;s%20Cafeteria!5e0!3m2!1sen!2suk!4v1703097330875!5m2!1sen!2suk" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                <a href="https://maps.app.goo.gl/LMaZVKPPQLWV79V26"><img width="auto" height="300" src="images/castroMap.png" alt=""></a>
             </div>
             <div class="info-cell">
                 <div class="icon">
                     <img src="images/clock.svg" alt="">
                 </div>
+                
                 <div class="timetable-info">
                     <span class="day"><span>Monday </span><span>9 am – 5 pm</span></span>
                     <span class="day"><span>Tuesday </span><span>9 am – 5 pm</span></span>
@@ -357,14 +371,7 @@
                     <span class="day" style="color: black;"><span>Sunday (Closed)</span></span>
                 </div>
             </div>
-            <div class="info-cell">
-                <div class="icon">
-                    <img src="images/call.svg" alt="">
-                </div>
-                <div class="info-content">
-                    <span>phoneNumber</span>
-                </div>
-            </div>
+
         </div>
 
         <div class="info-catering">
@@ -405,7 +412,7 @@
         <div class="main-footer-content">
                     <div class="footer-left-side">
                         <div class="footer-title">
-                            <h2>CASTRO'S CAFETERIA</h2>
+                            <img class="footer-logo" src="images/castroLogoWhite.png" alt="">
                         </div>
                             <!-- <ul>
                                 <li>Menu</li>
@@ -414,20 +421,30 @@
                                 <li>Contact us</li>
                             </ul> -->
 
-                            <div class="footer-social-media">
+                            <!-- <div class="footer-social-media">
                                 <img src="images/instagram.svg" alt="" class="footer-social-logo">
                                 <img src="images/mail.svg" alt="" class="footer-social-logo">
                                 <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
-                            </div>
+                            </div> -->
 
                             <div class="footer-image computer">
-                                <img src="images/happy pineapple.png" alt="">
+                                <!-- <img src="images/happy pineapple.png" alt=""> -->
+                                <div class="footer-social-media">
+                                    <img src="images/instagram.svg" alt="" class="footer-social-logo">
+                                    <img src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
+                                </div>
                             </div>
                         
                                         </div>
                 <div class="footer-right-side phone">
                     <div class="footer-image">
-                        <img src="images/happy pineapple.png" alt="">
+                        <!-- <img src="images/happy pineapple.png" alt=""> -->
+                        <div class="footer-social-media">
+                            <img src="images/instagram.svg" alt="" class="footer-social-logo">
+                            <img src="images/mail.svg" alt="" class="footer-social-logo">
+                            <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
+                        </div>
                     </div>
                 </div>
             </div>
