--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="right-nav">
                     <div class="top-right-nav">
                         <ul class="nav-items">
-                            <li><a href="#">GALLERY</a></li>
+                            <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
                             <li><a href="#">CONTACT US</a></li>
                         </ul>
                     </div>
@@ -44,7 +44,7 @@
                 <ul class="nav-items">
                     <li><a href="menu.html">MENU</a></li>
                     <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
                     <li><a href="#">CONTACT US</a></li>
                 </ul>
             </div>
@@ -354,7 +354,7 @@
                     <span>phoneNumber</span>
                 </div> -->
                 <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2378.3911701507423!2d-2.992845023578032!3d53.40783007230717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b21eddf2653d1%3A0x6abac9849d310dcb!2sCastro&#39;s%20Cafeteria!5e0!3m2!1sen!2suk!4v1703097330875!5m2!1sen!2suk" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-                <a href="https://maps.app.goo.gl/LMaZVKPPQLWV79V26"><img width="auto" height="300" src="images/castroMap.png" alt=""></a>
+                <a href="https://maps.app.goo.gl/LMaZVKPPQLWV79V26"><img  width="auto" height="300" src="images/castroMap.png" alt=""></a>
             </div>
             <div class="info-cell">
                 <div class="icon">
