changes to the menu hamburger

--- a/index.html
+++ b/index.html
@@ -55,55 +55,10 @@
                 <h3>Open for breakfast & lunch</h3>
                 <!-- <button>Contact Us</button> -->
                 <!-- sample html for this button-->
-<a href="#">
-    <div class="button">
-        CHECK IT OUT
-        <div></div>
-      </div>
-</a>
-  <!-- stylesheet for this button -->
-  <style type="text/css">
-    .button {
-        width: 10rem;
-        text-align: center;
-      backface-visibility: hidden;
-    /* position: relative; */
-    cursor: pointer;
-    display: inline-block;
-    white-space: nowrap;
-    background: #219C90;
-    border-radius: 0px;
-    border: 0px solid #1a7a70;
-    border-width: 0px 0px 4px 0px;
-    padding: 10px 20px 10px 20px;
-      color: #fff;
-    font-size: initial;
-    font-family: Helvetica Neue;
-    font-weight: 900;
-    font-style: normal
-    }
-    .button > div {
-      color: #999;
-    font-size: 10px;
-    font-family: Helvetica Neue;
-    font-weight: initial;
-    font-style: normal;
-    text-align: center;
-    margin: 0px 0px 0px 0px
-    }
-    .button > i {
-      font-size: 1em;
-    border-radius: 0px;
-    border: 0px solid transparent;
-    border-width: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    position: static
-    }
-    .button > .ld {
-      font-size: initial
-    }
-  </style>
+
+<a href="" class="original-button">CHECK IT OUT</a>
+
+ 
             </div>
         </div>
     </main>
@@ -354,7 +309,7 @@
                     <span>phoneNumber</span>
                 </div> -->
                 <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2378.3911701507423!2d-2.992845023578032!3d53.40783007230717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b21eddf2653d1%3A0x6abac9849d310dcb!2sCastro&#39;s%20Cafeteria!5e0!3m2!1sen!2suk!4v1703097330875!5m2!1sen!2suk" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-                <a href="https://maps.app.goo.gl/LMaZVKPPQLWV79V26"><img  width="auto" height="300" src="images/castroMap.png" alt=""></a>
+                <a href="https://maps.app.goo.gl/LMaZVKPPQLWV79V26"><img class="map-img" src="images/castroMap.png" alt=""></a>
             </div>
             <div class="info-cell">
                 <div class="icon">
@@ -430,9 +385,9 @@
                             <div class="footer-image computer">
                                 <!-- <img src="images/happy pineapple.png" alt=""> -->
                                 <div class="footer-social-media">
-                                    <img src="images/instagram.svg" alt="" class="footer-social-logo">
-                                    <img src="images/mail.svg" alt="" class="footer-social-logo">
-                                    <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
+                                    <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
+                                    <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                                 </div>
                             </div>
                         
@@ -441,9 +396,9 @@
                     <div class="footer-image">
                         <!-- <img src="images/happy pineapple.png" alt=""> -->
                         <div class="footer-social-media">
-                            <img src="images/instagram.svg" alt="" class="footer-social-logo">
-                            <img src="images/mail.svg" alt="" class="footer-social-logo">
-                            <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
+                            <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
+                            <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                            <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                         </div>
                     </div>
                 </div>
