--- a/menu.html
+++ b/menu.html
@@ -272,7 +272,6 @@
                     <div class="footer-left-side">
                         <div class="footer-title">
                             <img class="footer-logo" src="images/castroLogoWhite.png" alt="">
-
                         </div>
                             <!-- <ul>
                                 <li>Menu</li>
@@ -281,20 +280,30 @@
                                 <li>Contact us</li>
                             </ul> -->
 
-                            <div class="footer-social-media">
+                            <!-- <div class="footer-social-media">
                                 <img src="images/instagram.svg" alt="" class="footer-social-logo">
                                 <img src="images/mail.svg" alt="" class="footer-social-logo">
                                 <img src="images/tripadvisor.svg" alt="" class="footer-social-logo">
-                            </div>
+                            </div> -->
 
                             <div class="footer-image computer">
-                                <img src="images/happy pineapple.png" alt="">
+                                <!-- <img src="images/happy pineapple.png" alt=""> -->
+                                <div class="footer-social-media">
+                                    <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
+                                    <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
+                                </div>
                             </div>
                         
                                         </div>
                 <div class="footer-right-side phone">
                     <div class="footer-image">
-                        <img src="images/happy pineapple.png" alt="">
+                        <!-- <img src="images/happy pineapple.png" alt=""> -->
+                        <div class="footer-social-media">
+                            <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
+                            <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                            <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
+                        </div>
                     </div>
                 </div>
             </div>
