Changes to contact us and minor design bugs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CASTRO'S</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
@@ -30,7 +30,7 @@
                     <div class="top-right-nav">
                         <ul class="nav-items">
                             <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
-                            <li><a href="#">CONTACT US</a></li>
+                            <li><a href="contactUs.html">CONTACT US</a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     <li><a href="menu.html">MENU</a></li>
                     <li><a href="#">ABOUT US</a></li>
                     <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="contactUs.html">CONTACT US</a></li>
                 </ul>
             </div>
         </header>
@@ -226,7 +226,7 @@
                         <span>Canarian style potatoes, Mojo Picon</span>
                     </div>
                 </div>
-                <div class="tapas-cell">
+                <div class="tapas-cell last">
                     <div class="tapas-title">
                         <h3>PADRON PEPPERS</h3>
                     </div>
@@ -257,7 +257,7 @@
                         <span>Loaded Fries with Mechada (Beef brisket), cheese, onions, house sauce trio</span>
                     </div>
                 </div>
-                <div class="moreScran-cell">
+                <div class="moreScran-cell last">
                     <div class="moreScran-title">
                         <h3>SMASH BURGER **only available Fridays & Saturdays</h3>
                     </div>
