Bug changes for the menu

--- a/contactUs.html
+++ b/contactUs.html
@@ -50,6 +50,10 @@
         </div>
     </header>
 
+    <div class="banner">
+        <img src="images/castroPadronPepper.png" alt="">
+    </div>
+
     <div class="main-screen">
         <h1>Send us an email</h1>
         <form action="https://formspree.io/f/mjvnbnkw" method="post">
