--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <div class="location-info">
 
                     <a href="https://maps.app.goo.gl/9YywLLvwJcCdgLaXA">
-                        <span>8A Hackins hey,</span>
+                        <span>8A Hackins Hey,</span>
                         <span>Liverpool, L2 2AW,</span>
                         <span>United Kingdom</span>
                     </a>
