Changes to the contact us page

--- a/menu.html
+++ b/menu.html
@@ -35,10 +35,9 @@
         </div>
         <div class="nav-menu-phone">
             <ul class="nav-items">
-                <li><a href="#">MENU</a></li>
-                <li><a href="#">ABOUT US</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">CONTACT US</a></li>
+                <li><a href="menu.html">MENU</a></li>
+                <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
+                <li><a href="contactUs.html">CONTACT US</a></li>
             </ul>
         </div>
     </header>
